test/files/neg/t0345.check
t0345.scala:2: error: object creation impossible.
Missing implementation for member of trait Lizt:
  def cons(a: Nothing): Unit = ???

    val empty = new Lizt[Nothing] {
                    ^
1 error
